Removed Maintainability Issues by replacing this usage of |Stream.collect(Collectors.toList())" with "Stream.toList()" and ensure that the list is unmodified. And add JaCoCo dependencies for code coverage